:bug: Correct spacing underneath wave on Hero

--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -33,6 +33,7 @@
 }
 
 .Hero-wave {
+    display:block;
     margin: 0;
     padding-bottom: 0px;
 }
